RESOLVED FIXED159172
REGRESSION?(r202466): http/tests/security/canvas-remote-read-remote-video-redirect.html failing on Sierra
https://bugs.webkit.org/show_bug.cgi?id=159172
Summary REGRESSION?(r202466): http/tests/security/canvas-remote-read-remote-video-red...
Jer Noble
Reported 2016-06-27 14:52:43 PDT
REGRESSION?(r202466): http/tests/security/canvas-remote-read-remote-video-redirect.html failing on Sierra
Attachments
Patch (8.07 KB, patch)
2016-06-27 15:08 PDT, Jer Noble
no flags
Patch (8.44 KB, patch)
2016-06-27 15:17 PDT, Jer Noble
no flags
Jer Noble
Comment 1 2016-06-27 14:53:08 PDT
Jer Noble
Comment 2 2016-06-27 15:08:17 PDT
Jer Noble
Comment 3 2016-06-27 15:17:29 PDT
Brent Fulgham
Comment 4 2016-06-27 16:29:54 PDT
Comment on attachment 282176 [details] Patch LGTM. R=me.
WebKit Commit Bot
Comment 5 2016-06-27 16:56:28 PDT
Comment on attachment 282176 [details] Patch Clearing flags on attachment: 282176 Committed r202520: <http://trac.webkit.org/changeset/202520>
WebKit Commit Bot
Comment 6 2016-06-27 16:56:32 PDT
All reviewed patches have been landed. Closing bug.
WebKit Commit Bot
Comment 7 2016-06-27 17:34:54 PDT
Re-opened since this is blocked by bug 159185
Ryan Haddad
Comment 8 2016-06-27 17:37:25 PDT
(In reply to comment #7) > Re-opened since this is blocked by bug 159185 /Volumes/Data/slave/elcapitan-32bit-release/build/Source/WebCore/platform/network/cocoa/WebCoreNSURLSession.mm:74:17: error: property 'hasSingleSecurityOrigin' requires method 'hasSingleSecurityOrigin' to be defined - use @synthesize, @dynamic or provide a method implementation in this class implementation [-Werror,-Wobjc-property-implementation] https://build.webkit.org/builders/Apple%20El%20Capitan%20Release%20%2832-bit%20Build%29/builds/7249
Alex Christensen
Comment 9 2016-06-27 17:43:27 PDT
Comment on attachment 282176 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=282176&action=review > Source/WebCore/platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.mm:2252 > + if ([session respondsToSelector:@selector(hasSingleSecurityOrigin)]) > + return session.hasSingleSecurityOrigin; El Capitan compilers didn't like this. Does it need to be [session hasSingleSecurityOrigin]?
Jer Noble
Comment 10 2016-06-27 23:35:22 PDT
(In reply to comment #9) > Comment on attachment 282176 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=282176&action=review > > > Source/WebCore/platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.mm:2252 > > + if ([session respondsToSelector:@selector(hasSingleSecurityOrigin)]) > > + return session.hasSingleSecurityOrigin; > > El Capitan compilers didn't like this. Does it need to be [session > hasSingleSecurityOrigin]? No, the error message is correct. It needs a @synthesize.
Jer Noble
Comment 11 2016-06-27 23:44:26 PDT
Note You need to log in before you can comment on or make changes to this bug.