Source/WebCore/platform/network/cocoa/WebCoreNSURLSession.h
@@ -46,6 +46,7 @@ class CachedResourceRequest;
 class PlatformMediaResource;
 class PlatformMediaResourceLoader;
 class WebCoreNSURLSessionDataTaskClient;
+class SecurityOrigin;
 }
 
 enum class WebCoreNSURLSessionCORSAccessCheckResults {
@@ -63,9 +64,11 @@ WEBCORE_EXPORT @interface WebCoreNSURLSession : NSObject {
     NSString *_sessionDescription;
     HashSet<RetainPtr<WebCoreNSURLSessionDataTask>> _dataTasks;
     BOOL _invalidated;
+    BOOL _hasSingleSecurityOrigin;
     NSUInteger _nextTaskIdentifier;
     OSObjectPtr<dispatch_queue_t> _internalQueue;
     WebCoreNSURLSessionCORSAccessCheckResults _corsResults;
+    RefPtr<WebCore::SecurityOrigin> _requestedOrigin;
 }
 - (id)initWithResourceLoader:(WebCore::PlatformMediaResourceLoader&)loader delegate:(id<NSURLSessionTaskDelegate>)delegate delegateQueue:(NSOperationQueue*)queue;
 @property (readonly, retain) NSOperationQueue *delegateQueue;
@@ -73,6 +76,7 @@ WEBCORE_EXPORT @interface WebCoreNSURLSession : NSObject {
 @property (readonly, copy) NSURLSessionConfiguration *configuration;
 @property (copy) NSString *sessionDescription;
 @property (readonly) BOOL didPassCORSAccessChecks;
+@property (readonly) BOOL hasSingleSecurityOrigin;
 - (void)finishTasksAndInvalidate;
 - (void)invalidateAndCancel;
 
